- updated .gitignore - modified data parsing process in 'get_ds_vacancies' - added some map visualizations in 'vacancies_analysis'

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/datasets/test_save_vacancies.csv
+/datasets/vacancies.json
 /tests.ipynb
 /selenium_test.ipynb
 /geckodriver.log
+/test.json
+/test2.json
